== 0.4.2 /

 * Add filter by closed or not with closed keywords

== 0.4.1 / 2010-02-14

 * Update all gem dependencies
 * Fix some bug

== 0.4.0 / 2009-12-01

 * Add filter by state in search ticket
 * Add possibility to change function of all member by project
 * Add preview in ticket and ticket updates
 * Add ticket's milestone information in ticket show
 * Add ordering to all column in ticket search

== 0.3.0 /

 *

== 0.2.0 / 2009-02-10

 * A user can be chane his own password in his profile
 * Add Redcloth formating in project/ticket/milestone description
 * Add a closed option in state. This option define if a state define a ticket
   closed or not it's use in milestone
 * Add a administration of State. You see all state and you can add some new
 * Add converter Redmine to Oupsnow in a thor task
 * Add milestone for each project
 * Add a list of User in admin part
 * Define a global admin user by user. This global admin can be made
   everything. Oupsnow administration and project settings
 * Define a project admin by function. A user with this function can be update
   settting about project. Not other project and administration of Oupsnow

== 0.1.0 / 2009-01-21

 * Initial release