@@ -1,10 +1,16 @@
-%h1
-  Edit milestones :
-  = @milestone.name
+#block-forms.block
+  .content
+    %h1
+      Edit milestones :
+      = @milestone.name
 
-= error_messages_for :milestone
+    .inner
+      .flash
+        = error_messages_for :milestone
 
-- form_for([@project, @milestone]) do |f|
-  = render :partial => 'form', :locals => {:f => f}
-  %p
-    = f.submit "Update"
+      - form_for([@project, @milestone], :html => {:class => 'form'}) do |f|
+        = render :partial => 'form', :locals => {:f => f}
+        %div{:class => 'group navform'}
+          = f.submit "Update", :class => 'button'
+          or
+          = link_to 'Cancel', project_milestones_url(@project)
