@@ -3,6 +3,12 @@
 - content_for :tag_cloud_sidebar do
   = render :partial => 'shared/tag_cloud', :locals => {:tags => @milestone.tag_counts, :project => @project}
 
+- if admin? @project
+  .secondary-navigation
+    %ul
+      %li.first= link_to('Edit milestone',edit_project_milestone_url(@milestone.project_id, @milestone))
+    .clear
+
 #block-text.block
   .content
     %h2
